force-app/main/default/objects/Member_Result__c/Member_Result__c.object-meta.xml
<CustomObject>
    <description>A record of results reported by a member about a specific program offering. A member may have more than one results record for a program offering (if they shared two different types of results or if they shared at two different points in participation).</description>
    <label>Member Result</label>
    <nameField>
        <displayFormat>MR-{0000}</displayFormat>
        <label>Member Result Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>