force-app/main/default/objects/Member_Result__c/fields/Date_Activity_or_Submit__c.field-meta.xml
<CustomField>
    <fullName>Date_Activity_or_Submit__c</fullName>
    <inlineHelpText>This date may vary depending on the program type. It&apos;s meant to be a reference for when the activity took place or when the member sent in the result (which should be near the activity time).</inlineHelpText>
    <label>Date of Activity or Submit</label>
    <type>Date</type>
</CustomField>