force-app/main/default/objects/Member_Result__c/fields/File_Comment__c.field-meta.xml
<CustomField>
    <fullName>File_Comment__c</fullName>
    <inlineHelpText>Briefly list or describe what&apos;s in the file. Use words to aid filtering: hi-res, video, etc.</inlineHelpText>
    <label>File Comment</label>
    <type>TextArea</type>
</CustomField>