force-app/main/default/objects/Member_Result__c/fields/File_URL__c.field-meta.xml
<CustomField>
    <fullName>File_URL__c</fullName>
    <inlineHelpText>Enter a url for material online or in Dropbox</inlineHelpText>
    <label>File URL</label>
    <type>Url</type>
</CustomField>