force-app/main/default/objects/Member_Result__c/fields/Impact_Text_or_Description__c.field-meta.xml
<CustomField>
    <fullName>Impact_Text_or_Description__c</fullName>
    <label>Impact Text or Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>