force-app/main/default/objects/Member_Result__c/fields/Keywords__c.field-meta.xml
<CustomField>
    <fullName>Keywords__c</fullName>
    <inlineHelpText>Select keywords that describe the focus or context of this member result.</inlineHelpText>
    <label>Keywords</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>APS</fullName>
            </value>
            <value>
                <fullName>Board Development</fullName>
            </value>
            <value>
                <fullName>Business Relationships</fullName>
            </value>
            <value>
                <fullName>Capacity Building</fullName>
            </value>
            <value>
                <fullName>Community Engagement</fullName>
            </value>
            <value>
                <fullName>Diaper Drives</fullName>
            </value>
            <value>
                <fullName>Families-babies-parents</fullName>
            </value>
            <value>
                <fullName>Fundraising/Events</fullName>
            </value>
            <value>
                <fullName>Huggies</fullName>
            </value>
            <value>
                <fullName>Leadership</fullName>
            </value>
            <value>
                <fullName>Marketing/PR/Website</fullName>
            </value>
            <value>
                <fullName>Partner Agencies</fullName>
            </value>
            <value>
                <fullName>Professional Training</fullName>
            </value>
            <value>
                <fullName>Purchasing</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Technology</fullName>
            </value>
            <value>
                <fullName>U by Kotex</fullName>
            </value>
            <value>
                <fullName>Urban</fullName>
            </value>
            <value>
                <fullName>Volunteers</fullName>
            </value>
            <value>
                <fullName>Warehouse/storage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>