force-app/main/default/objects/Member_Result__c/fields/Positive_Reviews__c.field-meta.xml
<CustomField>
    <fullName>Positive_Reviews__c</fullName>
    <inlineHelpText>Number of reviews that indicated content might be usable.</inlineHelpText>
    <label>Positive Reviews</label>
    <summaryFilterItems>
        <field>Usability_Review__c.Usable_content__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </summaryFilterItems>
    <summaryForeignKey>Usability_Review__c.Member_Results__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>