force-app/main/default/objects/Member_Result__c/fields/Program_Offering__c.field-meta.xml
<CustomField>
    <fullName>Program_Offering__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Program period and opportunity to which this record pertains.</description>
    <inlineHelpText>The member results should apply to a specific program opportunity and period.</inlineHelpText>
    <label>Program Offering</label>
    <referenceTo>Program_Offering__c</referenceTo>
    <relationshipLabel>Member Results</relationshipLabel>
    <relationshipName>Member_Results</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>