force-app/main/default/objects/Member_Result__c/fields/Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Result_Type__c</fullName>
    <inlineHelpText>Select the type that best categorizes the results statement.</inlineHelpText>
    <label>Result Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Output- project or program</fullName>
            </value>
            <value>
                <fullName>Outcome- community or population</fullName>
            </value>
            <value>
                <fullName>Client testimonial statement</fullName>
            </value>
            <value>
                <fullName>Partner agency testimonial statement</fullName>
            </value>
            <value>
                <fullName>Stakeholder value recognition</fullName>
            </value>
            <value>
                <fullName>Member value recognition</fullName>
            </value>
            <value>
                <fullName>Lessons learned by member</fullName>
            </value>
            <value>
                <fullName>Image only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>