force-app/main/default/objects/Member_Result__c/fields/Reviews_Created__c.field-meta.xml
<CustomField>
    <fullName>Reviews_Created__c</fullName>
    <inlineHelpText>Number of usability reviews created for this record.</inlineHelpText>
    <label>Reviews Created</label>
    <summaryForeignKey>Usability_Review__c.Member_Results__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>