force-app/main/default/objects/Member_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>Program_Offering__c</columns>
    <columns>Account__c</columns>
    <columns>NAME</columns>
    <columns>Impact_Text_or_Description__c</columns>
    <columns>Result_Type__c</columns>
    <columns>Positive_Reviews__c</columns>
    <columns>Reviews_Created__c</columns>
    <columns>Keywords__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>State__c</columns>
    <columns>File_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program_Offering__c</field>
        <operation>contains</operation>
        <value>2019</value>
    </filters>
    <filters>
        <field>Program_Offering__c</field>
        <operation>contains</operation>
        <value>2020</value>
    </filters>
    <label>All</label>
</ListView>